Fix placeholder opacity on Firefox

--- a/Resources/Private/Scss/Sections/_search.scss
+++ b/Resources/Private/Scss/Sections/_search.scss
@@ -147,6 +147,7 @@
 
 	&::placeholder {
 		color: $text-color-light;
+		opacity: 1; // Firefox fix
 	}
 
 	.-show-popup & {
